Edited item class, html and js to allow different item sizes.

--- a/pizza-ordedring-app/src/main/resources/static/cssStyles/accountOrdersPage.css
+++ b/pizza-ordedring-app/src/main/resources/static/cssStyles/accountOrdersPage.css
@@ -496,6 +496,9 @@
 						 height: 100%;
 						
 					}
+					#itemSize {
+						font-size: 30px;
+					}
 					
 					#addonsTextDiv {
 						padding-top: 10px;
