--- a/pizza-ordedring-app/src/main/resources/static/cssStyles/checkoutPage.css
+++ b/pizza-ordedring-app/src/main/resources/static/cssStyles/checkoutPage.css
@@ -480,7 +480,9 @@
 						 height: 100%;
 						
 					}
-					
+					#itemSize {
+						font-size: 30px;
+					}
 					#addonsTextDiv {
 						padding-top: 10px;
 						padding-bottom: 5px;
