--- a/pizza-ordedring-app/src/main/resources/templates/editItemPage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/editItemPage.html
@@ -56,7 +56,7 @@
    				</div>
    				<div id="itemDescDiv">
    					<div id="itemName">
-   						[[${item.getItemName()}]] <span id="itemCost">$[[${item.getItemDefaultCostAsString()}]]</span>
+   						[[${item.getItemName()}]] <span id="itemCost">$[[${item.getItemDefaultCostsAsString().get(0)}]]</span>
    					</div>
    					<div id="itemDesc">
    						[[${item.getItemDesc()}]]
@@ -78,6 +78,23 @@
    			
    			
    			<div id="mainOptions">
+   			
+   				<div id="sizeDropdownContainer" th:if="${item.getItemSizesAsString()}"> 
+   					<label id="dropdownLabelName">Size: </label>
+   					<div class="dropdown" style="z-index:9"> 
+   						<div id="sizeSelectedOption"><span id="itemSizeSpan">[[${item.getItemSizesAsString().get(0)}]]</span> -
+								      <span id="sizeCostSpan">$[[${item.getItemDefaultCostsAsString().get(0)}]]</span></div> 
+   							<ul class="dropdown-menu" id="sizeDropdown-menu">
+   								<li th:each="price, sizeIndex : ${item.getItemDefaultCostsAsString()}" >
+								    <a href="#">
+								      <span id="itemSizeSpan" th:if="${item.getItemSizesAsString().get(sizeIndex.index) != null}"> [[${item.getItemSizesAsString().get(sizeIndex.index)}]] </span> 
+								      -
+								      <span id="sizeCostSpan">$[[${price}]]</span>
+								    </a>
+								 </li>
+   							</ul> 
+   					</div>
+   				</div>
    			
    				<!-- Thymleaf variables to be inserted into mainOptions and add-ons_Extra-->
    				<div th:each="topping : ${item.getIncludedToppings()}" id="hiddenIncludedToppings" hidden>
