--- a/pizza-ordedring-app/src/main/resources/static/cssStyles/admin/adminAddItem.css
+++ b/pizza-ordedring-app/src/main/resources/static/cssStyles/admin/adminAddItem.css
@@ -128,6 +128,7 @@
 		      	width: 100%;
 		      }
 		     #addItemRow1 {
+		     	position: relative;
 		      	width: 100%;
 		      	height: 40px;
 		      	display: flex;
@@ -147,7 +148,7 @@
 			      	
 		       }
 		      
-			      #itemName, #categoryN, #itemPrice {
+			      #itemName, #categoryN, #itemPrice, #itemSize{
 			      	width: 100%;
 			      	display: flex;
 			      	flex-direction: row;
@@ -155,8 +156,17 @@
 			      	justify-content: center;
 					align-items: center;
 			      	
-			      	font-size: 22px;
+			      	font-size: 20px;
 			        margin-bottom: 10px;
+			      }
+			      #itemPrice {
+			      	padding-left: 50px;
+			      }
+			      #priceAndSizeInfo {
+			      	position: absolute;
+			      	font-size: 15px;
+			      	top: -70%;
+			      	right: 0%;
 			      }
 			      	#addItemParamTitle {
 			      		width: 40%;
@@ -506,6 +516,10 @@
 			      		text-align: right;
 			      		margin-bottom: 5px;
 			      		white-space: nowrap;
+			      	}
+			      	#itemPriceErrorMessages {
+			      		padding-left: 50px;
+			      	
 			      	}
 			      
 			       input[type="text"] {
