--- a/pizza-ordedring-app/src/main/resources/static/cssStyles/admin/adminDeleteItem.css
+++ b/pizza-ordedring-app/src/main/resources/static/cssStyles/admin/adminDeleteItem.css
@@ -82,6 +82,7 @@
 		#imageAndDesc {
 			width: 100%;
 			height: 400px;
+			position: relative;
 			
 			display: flex;
 		}
@@ -109,6 +110,7 @@
 				flex-direction: column;
 				
 			}
+			
 				#itemNameAndDelete {
 					height: 30%;
 					width: 100%;
@@ -121,7 +123,7 @@
 					
 					font-size: 50px;
 				}
-					#itemName {
+				#itemName {
 					width: 45%;
 					
 					display: flex;
@@ -129,13 +131,16 @@
 					align-items: flex-end;
 					
 					font-size: 50px;
+					padding-top: 120px;
+					
 					text-decoration: underline;
 					text-decoration-color: blue;
+					white-space: nowrap;
 				}
 					#itemCost {
 						position: absolute;
-					  	right: 70%;
-					  	top: 80%;
+					  	right: 100%;
+					  	top: 40%;
 					  	
 					  	font-size: 45px;
 					}
@@ -177,11 +182,66 @@
 					font-size: 40px;
 				}
 		
+			#howManyDiv {
+				position: absolute;
+			  	right: 52.3%;
+			  	top: 40%;
+			  	
+			  	width: 80px;
+			  	height: 158px;
+			  	
+			  	border-radius: 10px;
+				border: 4px solid black;
+			  	
+			  	display: flex;
+			  	flex-direction: column;
+			  	
+				justify-content: center;
+				align-items: center;
+			    text-align: center;
+			    
+			  	
+			  	font-size: 45px;
+			}
+		
+			#increaseNumberDiv {	
+				width: 100%;
+				background-color: green;
+				border-top-left-radius: 4px;
+				border-top-right-radius: 4px;
+				border-bottom: 2px solid black;
+				cursor: pointer;
+			}
+			#numberOfItemDiv {
+				width: 100%;
+				background-color: blue;
+			}
+			
+			#decreaseNumberDiv {	
+				width: 100%;
+				background-color: red;
+				border-bottom-left-radius: 4px;
+				border-bottom-right-radius: 4px;
+				border-top: 2px solid black;
+				cursor: pointer;
+			}
+				#decreaseNumber{
+				}
 		
 		
 		#mainOptions {
 			min-height: 25px;
 			padding-right: 28px;
+			position: relative;
+		}	
+		#sizeDropdownContainer {
+				position: absolute;
+			  	right: 14%;
+			  	top: -15%;
+			  	display: flex;
+			  	width: 600px;
+			  	height: 158px;
+			  	
 		}			
 		/* START - mainOptions Dropdown box styles. */	
 			#mainOptions-dropdownContainer {
