--- a/pizza-ordedring-app/src/main/resources/templates/admin/adminShowAllEditPage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/admin/adminShowAllEditPage.html
@@ -33,7 +33,7 @@
 		
    		<div id="pageBody">
    			<div id="body-headers">
-   				<div id="storeLocation"> 156 Elderwood Ave </div>
+   				<div id="storeLocation"> </div>
    				<div id="adminHomeTitle"> All Items </div>
    				<div id="adminHomeDiv">
    					<div id="adminHome">Admin Home</div>
