--- a/pizza-ordedring-app/src/main/resources/templates/categoryPage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/categoryPage.html
@@ -34,13 +34,13 @@
 		
    		<div id="pageBody">
    			<div id="body-headers">
-   				<div id="storeLocation"> 156 Elderwood Ave </div>
+   				<div id="storeLocation">  </div>
    				<div id="menuTitle">[[${displayItems.get(0).getCategory()}]]</div>
    				<div id="searchMenu">
    					Search:  
    					<div id="searchDiv">
-   							<form>
-		                        <input type="text" id="userSearchInput" placeholder="Search menu">
+   							<form action="/pizzaStore/ItemSearch" method="post">
+		                        <input type="text" id="userSearchInput" placeholder="Search menu" name="itemSearchString">
 		                     </form>
 		             </div>
    				</div>
@@ -90,6 +90,7 @@
 	<script src="/javaScript/pageRedirects/clicksPizzaLogo.js"></script>
 	<script src="/javaScript/pageRedirects/clicksItem.js"></script>
 	<script src="/javaScript/pageRedirects/clicksCheckout.js"></script>
+	<script src="/javaScript/pageRedirects/entersItemSearch.js"></script>
 	
 	<script src="/javaScript/bodySize-categoryPage.js"></script>
 	<script src="/javaScript/categoryPage-Rows.js"></script>
