--- a/pizza-ordedring-app/src/main/resources/templates/sign-inPage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/sign-inPage.html
@@ -36,7 +36,7 @@
 		
    		<div id="pageBody">
    			<div id="body-headers">
-   				<div id="storeLocation"> 156 Elderwood Ave </div>
+   				<div id="storeLocation">  </div>
    				<div id="signInTitle"> Sign-in </div>
    				<div id="emptySpace">
    					
@@ -67,6 +67,20 @@
 				        </div>
 				      </div>
 			    </div>
+   			</div>
+   			
+   			
+   			<div id="githubUserInstructions">
+   				<div id=UsernameInstructions>
+   					Try singing in as a Regular User and as an Admin.
+   					Admins are given access to admin controls by clicking on their profile and selecting 'Edit Menu'
+   				</div>
+   				<div id=UsernamePass1>
+   					Admin username: <span id="usernameSampleAdmin">'adminAccount@fakeEmail.com'</span>  <span id="userPassSample">password: 'Password1'</span>
+   				</div>
+   				<div id=UsernamePass2>
+   					Regular user username: <span id="usernameSampleRegular">'RegularUser@fakeEmail.com'</span>  <span id="userPassSample">password: 'Password1'</span>
+   				</div>
    			</div>
    			
    		</div>
