--- a/pizza-ordedring-app/src/main/resources/templates/sign-upPage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/sign-upPage.html
@@ -35,7 +35,7 @@
    		
    		<div id="pageBody">
    			<div id="body-headers">
-   				<div id="storeLocation"> 156 Elderwood Ave </div>
+   				<div id="storeLocation">  </div>
    				<div id="signUpTitle"> Sign-up </div>
    				<div id="emptySpace">
    					
