--- a/pizza-ordedring-app/src/main/resources/templates/admin/adminOptionsPage.html
+++ b/pizza-ordedring-app/src/main/resources/templates/admin/adminOptionsPage.html
@@ -34,7 +34,7 @@
 		
    		<div id="pageBody">
    			<div id="body-headers">
-   				<div id="storeLocation"> 156 Elderwood Ave </div>
+   				<div id="storeLocation">  </div>
    				<div id="adminHomeTitle"> Admin Menu Home </div>
    				<div id="emptySpace">
    					
